[package]
name          = "mars-active-delta-neutral"
description   = "Delta-neutral MM contract"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library    = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror       = { workspace = true }
mars-delta-neutral-position        = { workspace = true }
mars-types      = { workspace = true }
mars-utils      = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true }
cw-paginate     = { workspace = true }
mars-owner      = { workspace = true }

[dev-dependencies]
cw-multi-test       = { workspace = true, features = ["cosmwasm_1_1"] }
proptest            = { workspace = true }
test-case           = { workspace = true }
mars-credit-manager = { workspace = true }
mars-testing        = { workspace = true }
mars-mock-oracle    = { workspace = true }






