[package]
name          = "mars-mock-lst-oracle"
description   = "Mocked version of a slinky lst oracle contract"
version       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
edition       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest    = false

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library    = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true }
cw2             = { workspace = true }
thiserror       = { workspace = true }
cw-storage-plus = { workspace = true }
