[package]
name          = "mars-perps"
version       = "2.4.0"
authors       = { workspace = true }
license       = { workspace = true }
edition       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest    = false

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library    = []

[dependencies]
cosmwasm-schema   = { workspace = true }
cosmwasm-std      = { workspace = true }
cw2               = { workspace = true }
cw-paginate       = { workspace = true }
cw-storage-plus   = { workspace = true }
cw-utils          = { workspace = true }
mars-owner        = { workspace = true }
mars-perps-common = { workspace = true }
mars-types        = { workspace = true }
schemars          = { workspace = true }
serde             = { workspace = true }
thiserror         = { workspace = true }

[dev-dependencies]
anyhow                = { workspace = true }
cw-multi-test         = { workspace = true }
mars-address-provider = { workspace = true }
mars-oracle-osmosis   = { workspace = true }
mars-params           = { workspace = true }
mars-incentives       = { workspace = true }
mars-testing          = { workspace = true }
serde_json            = { workspace = true }
serde-json-wasm       = { workspace = true }
test-case             = { workspace = true }
